<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_banner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:id="@+id/rel_frame"
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/frame_banner"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_youtube_play_button" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="120dp"
                android:layout_height="180dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="160dp"
                android:background="@drawable/shape_rectangle"
                android:padding="2dp"
                android:transitionName="@string/poster_transition_name" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/img_banner"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="-10dp"
                app:srcCompat="@drawable/ic_share" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_banner"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/img_poster"
                android:orientation="vertical"
                android:padding="4dp"
                android:textSize="@dimen/txtSize">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/txtColor"
                    android:textSize="@dimen/txtHeading"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/txtColor"
                    android:textSize="@dimen/txtSize" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/txtColor"
                    android:textSize="@dimen/txtSize" />

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:drawableStart="@drawable/ic_star_white_24dp"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/txtColor"
                    android:textSize="@dimen/txtSize" />

            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/label_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/description"
            android:textColor="@color/txtColor"
            android:textSize="@dimen/txtLabel"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/txtColor"
            android:textSize="@dimen/txtSize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/label_trailer"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/trailers"
            android:textColor="@color/txtColor"
            android:textSize="@dimen/txtLabel"
            android:textStyle="bold" />


        <android.support.v4.view.ViewPager
            android:id="@+id/trailerPager"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/label_cast"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/cast"
                android:textColor="@color/txtColor"
                android:textSize="@dimen/txtLabel"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/castExpandArrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="4dp"
                android:src="@drawable/ic_arrow_down" />
        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/castList"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/label_review"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/reviews"
            android:textColor="@color/txtColor"
            android:textSize="@dimen/txtLabel"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviewList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>